# Continuous-Delivery-Demo

./: .flake8  README.md  pyproject.toml  requirements.txt  run.py  x.sh
.github/workflows/: build.yaml
app/: __init__.py  models.py  routes.py
app/templates/: index.html
config/: __init__.py  config.py  development.py  local.py  production.py
migrations/versions/: c98262c05f54_initial_migration.py
tests/: test_app.py  test_selenium.py
